# BillGeneratorV01

./: .cursorignore  .flake8  .gitignore  =5.0.0  ALL_TEMPLATES_IMPLEMENTATION.md  APP_TESTING_REPORT.md  ASSETS_SUMMARY.md  BILL_APPS_CLEANUP_COMPLETE.md  BROWSER_ACCESS_SUMMARY.md  CLEANUP_AND_SYNCHRONIZATION_SUMMARY.md  CLEANUP_INSTRUCTIONS_FOR_OTHER_REPOS.md  CODE_REVIEW_REPORT.md  COLUMN_WIDTH_RESET_COMPLETE.md  COMBINED_PROJECT_DOCUMENTATION.md  COMPREHENSIVE_TEST_REPORT.md  COMPREHENSIVE_TEST_RESULTS.md  CORRECTED_FINAL_BILL_SCRUTINY_SHEET.md  ChatGpt-Optimisation.md  DATAFRAME_ERROR_RESOLVED.md  DEPENDENCY_RESOLUTION.md  DEPLOYMENT_STATUS.md  Dockerfile  Dockerfile.api  ENHANCED_DESIGN_INTEGRATION_COMPLETE.md  ENHANCED_GENERATOR_LOGGER_FIX.md  ENHANCEMENT_DOCUMENTATION.md  EXCEL_ACCESS_SOLUTION.md  FINAL_BILL_SCRUTINY_SHEET_UPDATE.md  FINAL_COMBINED_DOCUMENTATION_SUMMARY.md  FINAL_DEMONSTRATION_RESULTS.md  FINAL_FIX_SUMMARY.md  FINAL_TESTING_SUMMARY.md  FINAL_VALIDATION_SUMMARY.md  FIXED_DOCUMENT_GENERATOR_SWITCH.md  FIXED_PDF_CONVERSION_SUMMARY.md  FIX_SUMMARY.md  GENERATE_ALL_DOCUMENTS.bat  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  (+222 more)
Attached_Assets_Dont_Delete/: Key Validation Question.txt
OUTPUT_FILES/: batch_report_1761069433.md
admin/: portal.py
ai/: predictor_stub.py
api/: auth.py  data_export.py  gateway.py  main.py
app_components/: streamlit_components.py
branding/: README.md
certification/: metadata.json
clean_output_17092025_103041/: clean_certificate_ii.html  clean_extra_items_statement.html  (+1 more)
(+327 files in other folders)
